# pii-scrubber

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: build-windows-exe.yml  build-windows-gui-exe.yml
docs/: USAGE.md
docs/plans/: 2026-06-18-pii-scrubber-design.md
examples/: entities.csv  piiscrub.toml
packaging/: gui_smoke.py  piiscrub-gui.spec  piiscrub.spec
src/piiscrub/: __init__.py  __main__.py  audit.py  cli.py  config.py  detectors.py  engine.py  entities.py  gui.py  gui_runner.py  llm.py  manifest.py  profiles.py  progress.py  projectmap.py  reconcile.py  report.py  walker.py
tests/: test_cli.py  test_detectors.py  test_engine.py  test_features.py  test_gui_runner.py  test_llm.py  test_reconcile.py  test_streaming.py  test_walker.py
