[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "piiscrub"
version = "0.1.0"
description = "Reusable, local PII pseudonymiser — point at a folder, get stripped copies + a decode map."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []          # stdlib only at runtime (keeps the .exe small + low-AV-risk)

[project.scripts]
piiscrub = "piiscrub.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
